Bug #16554
segfault in AsyncConnection::handle_connect_msg()
% Done:
0%
Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature:
Description
2016-06-30T03:26:21.223 INFO:teuthology.orchestra.run.smithi055.stderr:*** Caught signal (Segmentation fault) ** 2016-06-30T03:26:21.223 INFO:teuthology.orchestra.run.smithi055.stderr: in thread 7f57fdffb700 thread_name:ms_async_worker 2016-06-30T03:26:21.225 INFO:teuthology.orchestra.run.smithi055.stderr:2016-06-30 10:26:21.600325 7f57fe7fc700 0 -- 127.0.0.1:16805/6617 >> 127.0.0.1:0/6643 conn(0x7f57f8039790 sd= 14 :16805 s=STATE_ACCEPTING_WAIT_CONNECT_MSG_AUTH pgs=0 cs=0 l=0).handle_connect_msg accept we reset (peer sent cseq 8), sending RESETSESSION 2016-06-30T03:26:21.225 INFO:teuthology.orchestra.run.smithi055.stderr:2016-06-30 10:26:21.600413 7f57fe7fc700 0 -- 127.0.0.1:0/6643 >> 127.0.0.1:16805/6617 conn(0xbc4cf00 sd=12 :- 1 s=STATE_CONNECTING_WAIT_CONNECT_REPLY_AUTH pgs=83 cs=8 l=0).handle_connect_reply connect got RESETSESSION 2016-06-30T03:26:21.305 INFO:teuthology.orchestra.run.smithi055.stderr: ceph version v11.0.0-120-g957ece7 (957ece7e95d8f8746191fd9629622d4457d690d6) 2016-06-30T03:26:21.305 INFO:teuthology.orchestra.run.smithi055.stderr: 1: (ceph::BackTrace::BackTrace(int)+0x2d) [0xe8ab5b] 2016-06-30T03:26:21.305 INFO:teuthology.orchestra.run.smithi055.stderr: 2: ceph_test_msgr() [0xe8a249] 2016-06-30T03:26:21.305 INFO:teuthology.orchestra.run.smithi055.stderr: 3: (()+0x10340) [0x7f58073c6340] 2016-06-30T03:26:21.306 INFO:teuthology.orchestra.run.smithi055.stderr: 4: (std::vector<ceph::log::Subsystem, std::allocator<ceph::log::Subsystem> >::size() const+0xc) [0xe6f234] 2016-06-30T03:26:21.306 INFO:teuthology.orchestra.run.smithi055.stderr: 5: (ceph::log::SubsystemMap::should_gather(unsigned int, int)+0x22) [0xe66ed6] 2016-06-30T03:26:21.306 INFO:teuthology.orchestra.run.smithi055.stderr: 6: (AsyncConnection::handle_connect_msg(ceph_msg_connect&, ceph::buffer::list&, ceph::buffer::list&)+0xba4) [ 0x1215b72] 2016-06-30T03:26:21.306 INFO:teuthology.orchestra.run.smithi055.stderr: 7: (AsyncConnection::_process_connection()+0x5437) [0x1212d35] 2016-06-30T03:26:21.307 INFO:teuthology.orchestra.run.smithi055.stderr: 8: (AsyncConnection::process()+0x51c0) [0x120d46c] 2016-06-30T03:26:21.307 INFO:teuthology.orchestra.run.smithi055.stderr: 9: (C_handle_read::do_request(int)+0x27) [0x1222c7b]
Related issues
History
#1 Updated by Kefu Chai over 4 years ago
- Source changed from other to Development
kchai-2016-06-29_23:29:27-rados-master---basic-smithi/284164/teuthology.log
haomai, please feel free to reassign if this is not async msgr issue. thanks.
#2 Updated by Haomai Wang over 4 years ago
I guess it will be the same as http://tracker.ceph.com/issues/16552. So let's see whether that fixes
#3 Updated by Kefu Chai over 4 years ago
another occurrence /kchai-2016-07-10_07:48:29-rados-wip-kefu-testing---basic-mira/305967/teuthology.log
#4 Updated by Kefu Chai over 4 years ago
- Related to Bug #16552: RadosTestECPP::TearDownTestCase asserts in EventCenter::delete_time_event() added
#5 Updated by Kefu Chai over 4 years ago
#6 Updated by Haomai Wang over 4 years ago
- Status changed from New to Resolved
#7 Updated by Kefu Chai over 4 years ago
- Status changed from Resolved to 12
http://pulpito.ceph.com/kchai-2016-07-12_11:14:46-rados-wip-kefu-testing2---basic-mira/309761/
$ git br --contains e489cd4f07650f62b8adb46ad08c2f59b434fd18 master * wip-kefu-testing2
wip-kefu-testing2 being tested was ec1d77d3658fbc2d128173ab8d8bd4283c809984.
#8 Updated by Kefu Chai over 4 years ago
- Status changed from 12 to Resolved
#9 Updated by Greg Farnum almost 2 years ago
- Project changed from Ceph to Messengers
- Category deleted (
msgr)